--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
 <fish-header></fish-header>
-<br><br><br>
-<h1>
-  {{title}}
-</h1>
-<h2>List of Fish</h2>
-<ul class="fish">
-  <li *ngFor="let species of fish">
-    <span class="badge">{{species.id}} </span>{{species.name}}
-  </li>
-</ul>
+<router-outlet></router-outlet>
+
