--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,6 +1,7 @@
 <ul>
-    <li><a href="default.asp">Home</a></li>
-    <li><a href="news.asp">News</a></li>
-    <li><a href="contact.asp">Contact</a></li>
-    <li><a href="about.asp">About</a></li>
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/tour">Tour</a></li>
+    <li><a routerLink="/quiz">Quiz</a></li>
+    <li><a routerLink="/about">About</a></li>
+    <li><a routerLink="/contact">Contact</a></li>
 </ul>
