learn event binding

--- a/src/app/tour.component.css
+++ b/src/app/tour.component.css
@@ -10,7 +10,7 @@
     width: 15em;
   }
   .fish li {
-    cursor: crosshair;
+    cursor: pointer;
     position: relative;
     left: 0;
     background-color: #EEE;
