save before changing form

--- a/src/app/about.component.html
+++ b/src/app/about.component.html
@@ -1,3 +1,7 @@
+<div>
 <h1>About Fishy Fun</h1>
 
 <p>Welcome to the Fishy Fun App.  The goal is to create a simple app that will allow you to view a list of fish.  You can then select a species from the list to learn more about it.  Upon finishing touring the fish, you can select the 'Quiz' from the navbar, and attempt a quiz about the fish.  The app should keep track of the answers and give you a score at the end.</p>
+
+</div>
+
