--- a/src/app/quiz1.component.html
+++ b/src/app/quiz1.component.html
@@ -1,8 +1,7 @@
 <h1>Quiz part 1/10</h1>
 
+<h2>True/False</h2>
 <h2>{{question1}}</h2>
+{{score}}
 
-<button>True</button><button>False</button>
-
-
-
+<button (click)="onClicked()">True</button>
