--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -4,4 +4,5 @@
     <li><a routerLink="/quiz">Quiz</a></li>
     <li><a routerLink="/about">About</a></li>
     <li><a routerLink="/contact">Contact</a></li>
+    <li><a routerLink="/review">Review</a></li>
 </ul>
