--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -1,5 +1,6 @@
-<h1> quiz component html </h1>
+<h1>Quiz</h1>
+<p>If you feel you have sufficiently studied the fish, please try the quiz!</p>
 
-<p>Click Start to start the quiz.</p>
+<button (click)="onClicked()">Start the Quiz!</button>
 
-<a [routerLink]="['/quiz1']">Start</a>
+
